ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reverse-words
  annotations:
    kubernetes.io/ingress.class: nginx
    argocd.argoproj.io/compare-options: IgnoreExtraneous
spec:
  rules:
  - host: mycluster-lon02-b-446145-d02cf90349a0fe46c9804e3ab1fe2643-0000.eu-gb.containers.appdomain.cloud
    http:
      paths:
      - backend:
          serviceName: reverse-words
          servicePort: 31865
